<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />


    <item
        android:id="@+id/nav_upcoming"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/upcoming" />

    <item
        android:id="@+id/nav_finished"
        android:icon="@drawable/ic_finished"
        android:title="@string/finished" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/favorite2"/>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"/>

</menu>